# sdc3_vis_convert

./: Cargo.toml  LICENSE
src/: averaging.rs  fits.rs  lib.rs  main.rs  python.rs
src/read/: fits.rs  mod.rs  ms.rs  uvfits.rs
src/write/: mod.rs
