[package]
name = "sdc3_vis_convert"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "3.1.0", features = ["derive", "wrap_help"] }
crossbeam-channel = "0.5.6"
crossbeam-utils = "0.8.12"
env_logger = "0.10.0"
fitsio = "0.20.0"
fitsio-sys = "0.4.0"
hifitime = "3.3.0"
indicatif = { version = "0.17.0", features = ["rayon"] }
itertools = "0.10.0"
log = "0.4.0"
# marlu = "0.9.1"
# marlu = { path = "../marlu" }
marlu = { git = "https://github.com/cjordan/Marlu", branch = "hacks" }
ndarray = { version = "0.15.4", features = ["rayon"] }
rayon = "1.5.0"
vec1 = "1.5.0"
